@@ -163,9 +163,9 @@ module Nokogiri
 
       ###
       # Get the attribute value for the attribute +name+
-      def [](name)
-        return nil unless key?(name)
-        get(name)
+      def [] name
+        return nil unless key?(name.to_s)
+        get(name.to_s)
       end
 
       alias :next           :next_sibling
