@@ -9,6 +9,7 @@
   * Nokogiri::XML::Node#search automatically registers root namepsaces (LH #42)
   * Nokogiri::XML::NodeSet#search automatically registers namespaces
   * Nokogiri::HTML::NamedCharacters delegates to libxml2
+  * Nokogiri::XML::Node#[] can take a symbol (LH #48)
 
 === 1.2.1 / 2008-02-23
 
